--- a/src/Components/layouts/Header/Header.module.css
+++ b/src/Components/layouts/Header/Header.module.css
@@ -25,7 +25,7 @@
   padding-left: 5%;
 }
 
-.image-container {
+/* .image-container {
   max-width: 100%;
   margin: auto;
 }
@@ -33,7 +33,7 @@
 .image {
   max-width: 100%;
   margin: auto;
-}
+} */
 
 
 
