--- a/src/Components/UI/dropdown.css
+++ b/src/Components/UI/dropdown.css
@@ -12,6 +12,7 @@
     justify-content: center;
     border: 3px solid #ccc;
     color: #ccc;
+    background-color: #fff;
     position: relative;
     border-radius: 10px;
     
@@ -35,6 +36,7 @@
     max-height: 150px;
     margin-top:5px;
     background-color: #fff;
+    z-index: 1;
 }
 
 .dropdown-item {
@@ -52,7 +54,7 @@
     color: #fff;
 }
 
-.dropdown-selected-value {
+.dropdown.selected {
     color: black;
 }
 
