--- a/src/Components/UI/searchBar.css
+++ b/src/Components/UI/searchBar.css
@@ -12,7 +12,7 @@
 }
 .searchInputs {
   margin: auto;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,7 +28,8 @@
     border-radius: 10px;
     justify-content: center;
     font-size: 16px;
-    padding: 10px;
+    padding: 20px;
+    height: 25px;
   }
 
   .search input::placeholder{
